[package]
name = "stuffy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14.5"
memmap = "0.7.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
thiserror = "1.0.30"

[features]

[dev-dependencies]
rand = { version = "0.8.4", features = ["std_rng"] }
rand_chacha = "0.3.1"
